--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jobs:
               - npm i -g codecov
           script:
               - npm run lint
-              - npm run test
+              - npm run test:ci
           after_success:
               - codecov
           notifications:
